--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="module-1/marquez_module1_3.html">Assignment 1.3</a></li>
             <li><a href="#">Assignment 2.2</a></li>
-            <li><a href="#">Assignment 3.3</a></li>
+            <li><a href="module-3/marquez_mod3_3.html">Assignment 3.3</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
