--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="module-1/marquez_module1_3.html">Assignment 1.3</a></li>
             <li><a href="#">Assignment 2.2</a></li>
             <li><a href="module-3/marquez_mod3_3.html">Assignment 3.3</a></li>
+            <li><a href="module-4/marquez_mod4_2.html">Assignment 4.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
