--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#">Assignment 2.2</a></li>
             <li><a href="module-3/marquez_mod3_3.html">Assignment 3.3</a></li>
             <li><a href="module-4/marquez_mod4_2.html">Assignment 4.2</a></li>
+            <li><a href="module-6/marquez_module6_2.html">Assignment 6.2</li>
         </ul>
         <h3>Projects</h3>
         <ul>
