--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="module-3/marquez_mod3_3.html">Assignment 3.3</a></li>
             <li><a href="module-4/marquez_mod4_2.html">Assignment 4.2</a></li>
             <li><a href="module-6/marquez_module6_2.html">Assignment 6.2</li>
+            <li><a href="module-8/marquez_module8_2.html">Assignment 8.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
