--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <h3>Module Assignments</h3>
         <ul>
             <li><a href="module-1/marquez_module1_3.html">Assignment 1.3</a></li>
-            <li><a href="#">Assignment 2.2</a></li>
+            <li><a href="module-2/marquez_module2_2.html">Assignment 2.2</a></li>
             <li><a href="module-3/marquez_mod3_3.html">Assignment 3.3</a></li>
             <li><a href="module-4/marquez_mod4_2.html">Assignment 4.2</a></li>
             <li><a href="module-6/marquez_module6_2.html">Assignment 6.2</li>
             <li><a href="module-8/marquez_module8_2.html">Assignment 8.2</a></li>
+            <li><a href="module-9/marquez_module9_3.html">Assignment 9.3</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
